# vehicle-insurance-mlops-pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  test_logs.py  test_logs.txt  tests_logs.txt
MLOps/: __init__.py  dataset.py  features.py  plots.py
MLOps/modeling/: predict.py  train.py
notebooks/: EDA.ipynb  download_project_data.ipynb  mongoDB_demo.ipynb
src/: cli.py
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/config/: aws_config.py  mongo_db_connection.py  settings.py
src/data_access/: vehicle_insurance_repository.py
src/entities/: artifact_entity.py  config_entities.py  estimatior.py  estimator.py  s3_estimator.py
src/exceptions/: __init__.py  demo_exception.py
src/logger/: __init__.py  logger_demo.py
src/pipeline/: predicting_pipeline.py  training_pipeline.py
src/utils/: file_utils.py
tests/: conftest.py  test_data_ingestion.py  test_data_transformation.py  test_data_validation.py  test_entities.py  test_errors.py  test_estimator.py  test_model_evaluation.py  test_model_pusher.py  test_model_training.py  test_s3_estimator.py  test_stratify.py
tests/integration/: test_pipeline_model_training.py  test_training_pipeline_ingestion.py  test_training_pipeline_transformation.py  test_training_pipeline_validaton.py
