[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MLOps"
version = "0.0.1"
description = "End-to-end MLOps pipeline for vehicle insurance predictions: Data ingestion from MongoDB through model training, AWS deployment with Docker, and CI/CD automation for production-ready machine learning."
authors = [
  { name = "Jorballcor" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "awscli",
    "from-root>=1.3.0",
    "kagglehub>=0.3.13",
    "loguru",
    "pandas>=2.3.3",
    "pip",
    "pymongo>=4.15.3",
    "pytest",
    "python-dotenv",
    "ruff",
    "structlog>=25.5.0",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["MLOps"]
include = ["pyproject.toml", "MLOps/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["MLOps"]
force-sort-within-sections = true

